--- a/platforms/android/xwalk.gradle
+++ b/platforms/android/xwalk.gradle
@@ -158,7 +158,7 @@ cdvPluginPostBuildExtras.add({
     println xwalkSpec
 
     dependencies {
-        implementation xwalkSpec
+        implementation 'xwalk_core_library:23.53.589.4' //xwalkSpec
     }
 
     if (file('assets/xwalk-command-line').exists()) {
