--- a/platforms/android/xwalk.gradle
+++ b/platforms/android/xwalk.gradle
@@ -158,8 +158,9 @@ cdvPluginPostBuildExtras.add({
     println xwalkSpec
 
     dependencies {
-       compile 'org.xwalk:xwalk_core_library:23.53.589.4' //xwalkSpec
+//       compile 'org.xwalk:xwalk_core_library:23.53.589.4' //xwalkSpec
 //        implementation 'org.xwalk:xwalk_core_library:22.52.561.4' //xwalkSpec
+		compile 'org.xwalk:xwalk_core_library:22.52.561.4' //xwalkSpec
     }
 
     if (file('assets/xwalk-command-line').exists()) {
