--- a/plugin.xml
+++ b/plugin.xml
@@ -50,6 +50,7 @@
         <source-file src="platforms/android/src/org/crosswalk/engine/XWalkCordovaHttpAuthHandler.java" target-dir="src/org/crosswalk/engine"/>
 
         <framework src="platforms/android/xwalk.gradle" custom="true" type="gradleReference"/>
+		<framework src="com.android.support:support-v4:23+" />
 
         <hook type="after_plugin_install" src="hooks/after_plugin_install/000-shared_mode_special.js"/>
         <hook type="before_plugin_uninstall" src="hooks/before_plugin_uninstall/000-shared_mode_special.js"/>
