--- a/platforms/android/xwalk.gradle
+++ b/platforms/android/xwalk.gradle
@@ -158,10 +158,18 @@ cdvPluginPostBuildExtras.add({
     println xwalkSpec
 
     dependencies {
-       compile 'org.xwalk:xwalk_core_library:23.53.589.4' //xwalkSpec
+	 debugCompile(project(path: "CordovaLib", configuration: "debug"))
+     releaseCompile(project(path: "CordovaLib", configuration: "release"))
+     compile "com.android.support:support-v4:26.+"
+     compile "com.android.support:appcompat-v7:26.+"
+	 
+     //  compile 'org.xwalk:xwalk_core_library:23.53.589.4' //xwalkSpec
 //        implementation 'org.xwalk:xwalk_core_library:22.52.561.4' //xwalkSpec
 //        implementation 'org.xwalk:xwalk_core_library:22.52.561.4' //xwalkSpec
     }
+	configurations.all {     
+		 resolutionStrategy.force 'com.android.support:support-v4:26+'
+	}
 
     if (file('assets/xwalk-command-line').exists()) {
         println('Not writing assets/xwalk-command-line since file already exists.')
