--- a/platforms/android/xwalk.gradle
+++ b/platforms/android/xwalk.gradle
@@ -175,7 +175,8 @@ cdvPluginPostBuildExtras.add({
 	 
     dependencies {
 	 
-        implementation xwalkSpec
+	    compile 'org.xwalk:xwalk_core_library:22.52.561.4'
+        //implementation xwalkSpec
 	}
 
     if (file('assets/xwalk-command-line').exists()) {
